add background color to output
Co-authored-by: Thomas Friedrichs <friedrichs.tommy@gmail.com
Co-authored-by: Seth Medeiros <Medeirosseth@gmail.com>

--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
       <input id="side1" type="number">
       <label for="side2">Side Two:</label>
       <input id="side2" type="number">
-      <label for="side3">Side3:</label>
+      <label for="side3">Side Three:</label>
       <input id="side3" type="number">
-      <button type="submit" class="btn">What kind of triangle am I?</button>
+      <button type="submit" class="btn-success">What kind of triangle am I?</button>
     </form>
-
     <div class="result">
       <p>You're triangle is of type: <span id="type"></span>.</p>
     </div>
